src/components/Navbar.module.css
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: auto;
  padding: 1% 10%;
  position: relative;
  background-color: #1e3f6b;
  border-radius: 0px;
}

.rightMenu {
  display: flex;
  align-items: center;
}

.rightMenu a {
  color: white;
  padding: 25px 15px;
  text-decoration: none;
  margin: 0 10px;
}

.hamburger {
  display: none;
  font-size: 1.5em;
  cursor: pointer;
}

.drawer {
  display: none;
  position: absolute;
  top: 100%;
  right: 0;
  width: 200px;
  height: auto;
  background-color: white;
  border: 2px solid black;
  border-radius: 8px;
  flex-direction: column;
  display: flex;
  align-items: stretch;
  z-index: 1000;
}

.drawerItem {
  color: black;         
  padding: 10px 10px;
  text-decoration: none;
  margin: 5px 0;        
  display: flex;
  justify-content: center;  
}

/*Button Styles Navbar*/
.button {
  border-radius: 8px;
  padding: 8px 8px;
  color: white;
  cursor: pointer;
  transition: 0.15s;
  /*border: rgba(0, 0, 0, 0.753) 2px solid; i think this looks better with no border */
}

.button:hover {
  scale: 1.2;
}

.button:active {
  scale: 1.1;
}

.buttonLink {
  display: inline-block;
  border-radius: 8px;
  padding: 8px 16px;
  color: white;
  cursor: pointer;
  text-decoration: none;

}

.buttonLink:hover {
  color: white;
}

/* Media Queries */
@media (max-width: 768px) {
  .rightMenu {
    display: none;
  }
  
  .hamburger, .drawer {
    display: block;
  }
}

